[metadata]
name = footron-router
version = 0.1
url = https://github.com/BYU-PCCL/footron-messaging-router
license = MIT
author = BYU PCCL

[options]
package_dir=
    =src
packages = find:
python_requires = >=3.8
install_requires =
    footron-protocol @ git+https://github.com/BYU-PCCL/footron-protocol-python.git
    fastapi
    uvicorn[standard]

[options.packages.find]
where=src
